@@ -3,6 +3,9 @@
   __main symbol definition no longer clashes with the definition in
   "libgcc.a".
 
+- The printf() family stripped trailing zeroes from the integer part
+  of %g output. Fixed.
+
 
 c.lib 1.198 (11.12.2005)
 
